--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.9.0",
+    "image-webpack-loader": "^4.4.0",
+    "node-sass": "^4.9.4",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.6",
     "webpack-dev-server": "^3.1.4"
